crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__4.2.28__django__templatetags__static.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/4.2.28/django/templatetags/static.py
---
tag_rules: {}
filter_arities: {}
block_specs: {}
